=============================
 Release notes for Blosc 0.9
=============================

:Author: Francesc Alted i Abad
:Contact: faltet@pytables.org


Changes from 0.8.0 to 0.9
=========================

- Blosc can use threads now for leveraging the increasing number of
  multi-core processors out there.  See README-threaded.txt for more
  info.

- Added a protection for MacOSX so that it has to not link against
  posix_memalign() funtion, which seems not available in old versions of
  MacOSX (for example, Tiger).  At nay rate, posix_memalign() is not
  necessary on Mac because 16 bytes alignment is ensured by default.
  Thanks to Ivan Vilata.  Fixes #3.




.. Local Variables:
.. mode: rst
.. coding: utf-8
.. fill-column: 72
.. End: