@@ -16,10 +16,10 @@
 #define BLOSC_VERSION_RELEASE  0    /* for tweaks, bug-fixes, or development */
 
 #define BLOSC_VERSION_STRING   "0.9.0.dev"  /* string version.  Sync with above! */
-#define BLOSC_VERSION_DATE     "2010-03-30"      /* date version */
+#define BLOSC_VERSION_DATE     "2010-05-03"      /* date version */
 
 /* The *_VERS_FORMAT should be just 1-byte long */
-#define BLOSC_VERSION_FORMAT    1   /* Blosc format version, starting at 1 */
+#define BLOSC_VERSION_FORMAT    2   /* Blosc format version, starting at 1 */
 #define BLOSCLZ_VERSION_FORMAT  1   /* Blosclz format version, starting at 1 */
 
 /* The combined blosc and blosclz formats */
